<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.euro24.ui.teams.teamDetail.TeamDetailViewModel" />

    </data>

    <RelativeLayout
        android:id="@+id/fullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_normal"
        tools:background="@color/common_background_color"
        tools:context=".ui.teams.teamDetail.TeamDetailFragment">

        <RadioGroup
            android:id="@+id/buttons_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toggle_button_upper_h"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_team_info"
                style="@style/RadioButtonNoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:fontFamily="@font/teko_semi_bold"
                android:gravity="center"
                android:text="@string/team_button_info"
                android:textAllCaps="true"
                android:textColor="@color/radio_button_selector"
                android:textSize="@dimen/toggle_button_upper_text" />

            <RadioButton
                android:id="@+id/rb_team_matches"
                style="@style/RadioButtonNoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/teko_semi_bold"
                android:gravity="center"
                android:text="@string/team_button_matches"
                android:textAllCaps="true"
                android:textColor="@color/radio_button_selector"
                android:textSize="@dimen/toggle_button_upper_text" />

            <RadioButton
                android:id="@+id/rb_team_squad"
                style="@style/RadioButtonNoButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/teko_semi_bold"
                android:gravity="center"
                android:text="@string/team_button_squad"
                android:textAllCaps="true"
                android:textColor="@color/radio_button_selector"
                android:textSize="@dimen/toggle_button_upper_text" />

        </RadioGroup>

        <RelativeLayout
            android:id="@+id/team_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_container"
            android:background="@color/team_name_container"
            android:paddingBottom="@dimen/margin_big">

            <ImageView
                android:id="@+id/image_team_flag_header"
                android:layout_width="@dimen/flag_medium_w"
                android:layout_height="@dimen/flag_medium_h"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginVertical="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_normal"
                android:checked="false"
                android:contentDescription="@string/description_flag"
                tools:src="@drawable/default_flag" />

            <TextView
                android:id="@+id/text_team_name_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_toEndOf="@id/image_team_flag_header"
                android:fontFamily="@font/teko_semi_bold"
                android:textAllCaps="true"
                android:text="@{viewModel.teamName}"
                android:textColor="@color/team_btn_text_normal"
                android:textSize="@dimen/team_name"
                tools:text="@string/team_sui" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/team_detail_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/team_name_container"
            android:layout_marginTop="-32dp"
            android:layout_marginBottom="@dimen/margin_normal"
            android:background="@drawable/background_container_default_color" />

    </RelativeLayout>

</layout>